--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -18,6 +18,7 @@ server {
     location /ws {
         proxy_pass http://tcpconsoledev_ruby_1:9292;
         proxy_set_header Host $host;
+        proxy_set_header X-Hey $remote_user;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection Upgrade;
